--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,6 +9,13 @@
     <form id="form">
         <input type="text" name="name" placeholder="Enter name"><br><br>
         <input type="number" name="age" placeholder="Enter age"><br><br>
+         <input type="email" name="email" placeholder="Enter email"><br><br>
+          <select name="gender">
+            <option value="">Select gender</option>
+            <option value="male">Male</option>
+            <option value="female">Female</option>
+            <option value="other">Other</option>
+         </select><br><br>
         <button type="submit">Submit</button>
     </form>
 
